fix pull to refresh on mobile devices

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -41,6 +41,9 @@ body {
     min-height: 100vh;
     width: 100%;
     background-color: #F7F7F0;
+    @include max-devices(md){
+        overscroll-behavior-y: contain;
+    }
 }
 
 *, *::before, *::after {
